Fixed bug where search input text is white and not visible.

--- a/midzo/src/app/search/search-page/search-page.component.scss
+++ b/midzo/src/app/search/search-page/search-page.component.scss
@@ -20,6 +20,7 @@ input {
     padding-left: 10px;
     border: 1px solid black;  
     background-color: white;
+    color: black;
     text-align: left;
 
     div.mat-form-field-infix {
